# cs231n

./: .pre-commit-config.yaml  CLAUDE.md  NOTICE.md  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.github/: renovate.json
.github/workflows/: ci.yaml  docs.yaml
docs/: .gitignore  README.md  book.toml  compose.yaml  index.md
docs/assets/: elasticlunr.js
docs/assets/js/: mathjax.js
docs/lecture2/: classification.md  index.md  linear-classify.md
docs/lecture3/: index.md  optimization.md
docs/lecture4/: backpropagation.md  index.md
docs/lecture5/: cnn.md  index.md
docs/lecture7/: index.md  rnn.md
docs/lecture8/: attention.md  index.md  transformers.md
docs/src/: SUMMARY.md  introduction.md
docs/src/lecture2/: README.md
docs/src/lecture3/: README.md
docs/src/lecture4/: README.md
docs/src/lecture5/: README.md
src/assignment1/cs231n/datasets/: .gitignore
src/assignment2/: PyTorch.ipynb
src/assignment2/cs231n/: .gitignore  requirements.txt
src/assignment2/cs231n/classifiers/: fc_net.py
src/assignment2/cs231n/datasets/: .gitignore
