[project]
name = "cs231n"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython==3.0.10",
    "future==1.0.0",
    "h5py==3.11.0",
    "imageio==2.34.1",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "optuna==3.6.1",
    "pandas==2.2.2",
    "pickleshare==0.7.5",
    "scikit-learn==1.5.0",
    "scipy==1.13.0",
    "tabulate==0.9.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm==4.66.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbdev>=2.3.34",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
